tests/inter/fail/illegal-033.dcf
int x = 9223372036854775808;

void main() {}